--- a/index.html
+++ b/index.html
@@ -486,10 +486,10 @@
 		</script>
 
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/87/three.min.js"></script>
-		<script src="assets/OrbitControls.js"></script>
-		<script src="assets/OBJLoader.js"></script>
-		<script src="assets/MTLLoader.js"></script>
-		<script defer src="scripts.js"></script>
+		<script src="/assets/OrbitControls.js"></script>
+		<script src="/assets/OBJLoader.js"></script>
+		<script src="/assets/MTLLoader.js"></script>
+		<script defer src="/scripts.js"></script>
 		
 	</body>
 </html>
