--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
 		</script>
 
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/87/three.min.js"></script>
-		<script src="/assets/OrbitControls.js"></script>
+		<script src="/rhs31.github.io/assets/OrbitControls.js"></script>
 		<script src="/rhs31.github.io/assets/OBJLoader.js"></script>
 		<script src="/rhs31.github.io/assets/MTLLoader.js"></script>
 		<script defer src="/rhs31.github.io/scripts.js"></script>
