--- a/index.html
+++ b/index.html
@@ -440,10 +440,10 @@
 		        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 		        <h4 class="modal-title" id="projectModalLabel">Résumé</h4>
 		        <br>
-		        <div style="font-size: 15px;">Can't see it? <a style="font-size: 15px;" href="assets/Jan2019Resume.pdf">Click here.</a></div>
+		        <div style="font-size: 15px;">Can't see it? <a style="font-size: 15px;" href="rhs31.github.io/assets/Jan2019Resume.pdf">Click here.</a></div>
 		      </div>
 		      <div class="modal-body">
-		        <iframe style="width: 100%;height: 100%;" src="assets/Jan2019Resume.pdf" ></iframe>
+		        <iframe style="width: 100%;height: 100%;" src="rhs31.github.io/assets/Jan2019Resume.pdf" ></iframe>
 		      </div>
 		      <div class="modal-footer">
 		        <a data-dismiss="modal" style="text-decoration: none; cursor:pointer;">Close</a>
