changed copyright message for portfolio project

--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
 						    	I had a bit of previous experience with three.js, a JavaScript graphics library. After a few generic tutorials on three.js, and a lot of fiddling and searching on StackOverflow, I was able to have my imported head following my cursor in the browser. I then built my portfolio site around it using HTML and CSS along with the Bootstrap framework.
 						         <br>
 						         <br>
-						         <i> Note: Please remember that the design of this site is protected under copyright law.</i>
+						         <i> The design of this site is protected under copyright law.</i>
 							      
 
 						      </div>
