Small fixes to resume, code files

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 						    	<br>
 						    	<b>Technologies/Languages I Used:</b> Magic Leap One, Unity, C#
 						    	<br>
-						    	<b>Code/Files:</b> Available on request
+						    	<b>Code/Files:</b> <a href="https://drive.google.com/drive/folders/1xFqsUhMkWdM0oq_c8368hAHnOh2qmwiF?usp=sharing"><i class="fab fa-google-drive fa-fw"></i></a>
 						    	<br>
 						    	<b>Description:</b>
 						    	<br> 
@@ -314,7 +314,7 @@
 						    	<br>
 						    	<b>Technologies/Languages I Used:</b> HTML/CSS, Bootstrap, JavaScript, three.js, 3DF Zephyr, Blender
 						    	<br>
-						    	<b>Code/Files:</b> <a href="https://github.com/rhs31/rhs31.github.io"><i class="fab fa-github fa-fw"></i></a>
+						    	<b>Code/Files:</b> Available on request.
 						    	<br>
 						    	<b>Description:</b>
 						    	<br> 
@@ -402,7 +402,7 @@
 						    	<br>
 						    	<b>Technologies/Languages I Used:</b> C++
 						    	<br>
-						    	<b>Code/Files:</b> As this is an academic assignment, I have made the repo private to avoid plagiarism. Available on request.
+						    	<b>Code/Files:</b> As this is an academic assignment, the repo is private. Available on request.
 						    	<br>
 						    	<b>Description:</b>
 						    	<br> 
