Added site github link back

--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
 						    	<br>
 						    	<b>Technologies/Languages I Used:</b> HTML/CSS, Bootstrap, JavaScript, three.js, 3DF Zephyr, Blender
 						    	<br>
-						    	<b>Code/Files:</b> Available on request.
+						    	<b>Code/Files:</b> <a href="https://github.com/rhs31/rhs31.github.io"><i class="fab fa-github fa-fw"></i></a>
 						    	<br>
 						    	<b>Description:</b>
 						    	<br> 
