Fixed formatting for Tetrostairs

--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
 						    	<br>
 						    	<b>Technologies/Languages I Used:</b> Unity, C#, Piskel
 						    	<br>
-						    	<b>Code/Files:</b><br> <a href="https://github.com/rhs31/Tetris-Platformer"><i class="fab fa-github fa-fw"></i></a>
+						    	<b>Code/Files: </b><a href="https://github.com/rhs31/Tetris-Platformer"><i class="fab fa-github fa-fw"></i></a>
 						    	<br>
 						    	<b>Description:</b>
 						    	<br> 
