Added Track Builder

--- a/index.html
+++ b/index.html
@@ -90,6 +90,53 @@
 				    <!-- Accordion for "Unity/C#" tab -->
 						<div class="panel-group" id="accordion">
 						  <div class="panel panel-default">
+						    <div class="panel-heading" data-toggle="collapse" data-parent="#accordion" href="#collapseTrackBuilder" class="panel-heading" style="cursor:pointer;">
+						      <h4 class="panel-title">
+						        <a>
+						          Track Builder
+						        </a>
+						      </h4>
+						    </div>
+						    <div id="collapseTrackBuilder" class="panel-collapse collapse">
+						      <div class="panel-body">
+						        <h2>Track Builder</h2>
+						        <br>
+						    	<i>Note: There is currently no video here because it needs to be re-recorded once I have access to a Magic Leap device in the near-future. The videos we shot at the hackathon have a black, opaque background, instead of showing the app augmenting reality, and so I don't feel that this accurately portrays what the app looks like on the Magic Leap One device.</i>
+						    	<br>
+						        <b>Completed:</b> January 2019
+						    	<br>
+						    	<b>Project Duration:</b> Roughly 3 Days
+						    	<br>
+						    	<b>Role(s):</b> Concept, Programmer, Designer
+						    	<br>
+						    	<b>Team Size:</b> Three
+						    	<br>
+						    	<b>Technologies/Languages I Used:</b> Unity, C#, Magic Leap One
+						    	<br>
+						    	<b>Code/Files:</b> <a href="https://github.com/RealityVirtually2019/Track-Builder"><i class="fab fa-github fa-fw"></i></a> <a href="https://drive.google.com/open?id=1oMGvrKgWQlPJxZHE0EETAIUEZoiQ65jM"><i class="fab fa-google-drive fa-fw"></i></a> 
+						    	<br>
+						    	<b>Description:</b>
+						    	<br> 
+						    	This project was made for the 2019<a href="https://realityvirtuallyhack.com/">Reality Virtually Hackathon</a> at MIT. We had around 3 days to come up with a concept and build it. This is a rough proof-of-concept for a more fleshed out game that we are looking to create, which would be a physics-based Magic Leap Rube Goldberg machine creator. It is therefore currently a<b> work in progress.</b>
+						    	<br>
+						    	<br>
+								I teamed up with two software engineers, Elliott Baygan, and Ralston Louie, who I met at the hackathon. In this proof-of-concept, the player places down a start and an end point with the Magic Leap controller, and then obstacles (drones and brick walls) are spawned between the two. The player then must put down track pieces to build a track that gets the ball to the end point, without touching the obstacles. If the ball touches the obstacles or falls on the floor, the player can press a button to start over. Once the player is ready, they press a button to activate gravity on the ball, and it rolls down the track. The Magic Leap device also is scanning the room, so the room can be integrated into the track for the ball to roll on. At the hackathon, we used a tabletop to demonstrate this.
+								<br>
+								<br>
+								I wrote the scripts used to place down start, end, and track pieces. I also brought together all of the scripts and game parts in Unity for us to build to the Magic Leap device.
+								<br>
+								<br>
+								Elliott wrote a script that made it so the obstacles are spawned within a rectangular collider that encapsulates the start and end point, so they always spawn at random locations between the two, presenting a reasonable challenge for the player. He also wrote the script to trigger the victory sequence.
+								<br>
+								<br>
+								Ralston created 3D models for the team to use, and provided lots of support in various programming and bug-fixing tasks.
+								
+						    	<br>
+						    	<br>
+						      </div>
+						    </div>
+						  </div>
+						  <div class="panel panel-default">
 						    <div  data-toggle="collapse" data-parent="#accordion" href="#collapseTransplant" class="panel-heading" style="cursor:pointer;">
 						      <h4 class="panel-title">
 						        <a>
