--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@
 						      <div class="panel-body">
 						        <h2>Track Builder</h2>
 						        <br>
-						    	<i>Note: There is currently no video here because it needs to be re-recorded once I have access to a Magic Leap device in the near-future. The videos we shot at the hackathon have a black, opaque background, instead of showing the app augmenting reality, and so I don't feel that this accurately portrays what the app looks like on the Magic Leap One device.</i>
+						    	<i>Note: There is currently no video here, as the ones we recorded at the hackathon have an opaque background, and do not show the app augmenting reality. A better video will be recorded and posted here once I have access to a Magic Leap device in the near-future.</i>
+						    	<br>
 						    	<br>
 						        <b>Completed:</b> January 2019
 						    	<br>
@@ -117,22 +118,23 @@
 						    	<br>
 						    	<b>Description:</b>
 						    	<br> 
-						    	This project was made for the 2019<a href="https://realityvirtuallyhack.com/">Reality Virtually Hackathon</a> at MIT. We had around 3 days to come up with a concept and build it. This is a rough proof-of-concept for a more fleshed out game that we are looking to create, which would be a physics-based Magic Leap Rube Goldberg machine creator. It is therefore currently a<b> work in progress.</b>
+						    	This project was made for the 2019 <a href="https://realityvirtuallyhack.com/">Reality Virtually Hackathon</a> at MIT. We had around 3 days to come up with a concept and build it. This is a rough proof-of-concept for a more fleshed out game that we are looking to create, which would be a physics-based Rube Goldberg machine creator for the Magic Leap. It is therefore currently a<b> work in progress.</b>
 						    	<br>
 						    	<br>
-								I teamed up with two software engineers, Elliott Baygan, and Ralston Louie, who I met at the hackathon. In this proof-of-concept, the player places down a start and an end point with the Magic Leap controller, and then obstacles (drones and brick walls) are spawned between the two. The player then must put down track pieces to build a track that gets the ball to the end point, without touching the obstacles. If the ball touches the obstacles or falls on the floor, the player can press a button to start over. Once the player is ready, they press a button to activate gravity on the ball, and it rolls down the track. The Magic Leap device also is scanning the room, so the room can be integrated into the track for the ball to roll on. At the hackathon, we used a tabletop to demonstrate this.
+								I had come up with the idea for this game earlier, and wanted to see how far I could get with it at the hackathon. I teamed up with two software engineers: Elliott Baygan and Ralston Louie, who I met there. 
 								<br>
 								<br>
-								I wrote the scripts used to place down start, end, and track pieces. I also brought together all of the scripts and game parts in Unity for us to build to the Magic Leap device.
+								In this game, the player places down a start and an end point with the Magic Leap controller, and then obstacles (drones and brick walls) are automatically spawned between the two. The player then must put down track pieces to build a track that gets the ball to the end point, without touching the obstacles. If the ball touches the obstacles or falls on the floor, the player can press a button to start over. Once the player is ready, they press a button to activate gravity on the ball, and it rolls down the track. The Magic Leap device also scans the room to create a room mesh which can be integrated into the track for the ball to roll on. At the hackathon, we used a tabletop to demonstrate this.
 								<br>
 								<br>
-								Elliott wrote a script that made it so the obstacles are spawned within a rectangular collider that encapsulates the start and end point, so they always spawn at random locations between the two, presenting a reasonable challenge for the player. He also wrote the script to trigger the victory sequence.
+								I wrote the scripts that allow the player to place down or delete start, end, and track pieces. I also brought together all of the scripts and game parts in Unity for us to build to the Magic Leap device.
+								<br>
+								<br>
+								Elliott wrote a script that made it so the obstacles are spawned within a rectangular collider that encapsulates the start and end point, so they always spawn at random locations between the two. This presents a reasonable challenge for the player. He also wrote the script to trigger the victory sequence.
 								<br>
 								<br>
 								Ralston created 3D models for the team to use, and provided lots of support in various programming and bug-fixing tasks.
 								
-						    	<br>
-						    	<br>
 						      </div>
 						    </div>
 						  </div>
