Minor changes to Track Builder

--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
 						    	<br>
 						        <b>Completed:</b> January 2019
 						    	<br>
-						    	<b>Project Duration:</b> Roughly 3 Days
+						    	<b>Project Duration:</b> ~3 Days
 						    	<br>
-						    	<b>Role(s):</b> Concept, Programmer, Designer
+						    	<b>Role(s):</b> Concept, Developer, Programmer
 						    	<br>
 						    	<b>Team Size:</b> Three
 						    	<br>
