--- a/index.html
+++ b/index.html
@@ -100,8 +100,9 @@
 						    <div id="collapseTrackBuilder" class="panel-collapse collapse">
 						      <div class="panel-body">
 						        <h2>Track Builder</h2>
+						        <iframe width="100%" height="315" src="https://www.youtube.com/embed/3b6LYW6hun8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 						        <br>
-						    	<i>Note: There is currently no video here, as the ones we recorded at the hackathon have an opaque background, and do not show the app augmenting reality. A better video will be recorded and posted here once I have access to a Magic Leap device in the near-future.</i>
+						    	<i><b>Important Note:</b> This video is not an accurate representation of what the app looks like through the Magic Leap One device. It was unintentionally recorded with an opaque background, and thus does not show the app augmenting reality, which it does when viewed through the device. A better video will be recorded and posted here once I have access to a Magic Leap device in the near-future.</i>
 						    	<br>
 						    	<br>
 						        <b>Completed:</b> January 2019
