--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 						    	<br>
 						        <b>Completed:</b> January 2019
 						    	<br>
-						    	<b>Project Duration:</b> ~3 Days
+						    	<b>Project Duration:</b> ~Three Days
 						    	<br>
 						    	<b>Role(s):</b> Concept, Developer, Programmer
 						    	<br>
