Added new Track Builder video, changed about me

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		      <div class="modal-body">
 		        <center><img src="assets/RobHead.jpg"></center>
 		        <br>
-		        Hi, I'm Robbie. I'm a computer science student at the <nobr>University of Miami</nobr> in Coral Gables, Florida. I will tentatively be graduating in December of 2019, and am <b>currently looking for an internship for this summer.</b>
+		        Hi, I'm Robbie. I'm a computer science student at the <nobr>University of Miami</nobr> in Coral Gables, Florida. I will tentatively be graduating in December of 2019, and am <b>currently looking for <nobr>full-time</nobr> positions after graduation.</b>
 		        <br>
 		        <br>
 		        I grew up both in Princeton, New Jersey, and on the island of <nobr>St. Croix</nobr> in the US Virgin Islands.
@@ -51,8 +51,9 @@
 		        Lately, my primary focus has been in C# and Unity development, but I have experience with many technologies, and am open to learning more. Check out the projects section to see some of that experience. 
 		        <br>
 		        <br>
-		        I have previously worked as the Lead Instructor at 
-		        <a href="https://www.idtech.com/" style="text-decoration: underline;">iD Tech Camp's</a> 
+
+		        I have previously worked as a Unity developer for <nobr><a href="http://www.bogotadc.tv/#/transplant/">Bogota Digital Cinema</a></nobr>, where I worked on an interactive mixed reality art exhibit. I also worked as the Lead Instructor at 
+		        <nobr><a href="https://www.idtech.com/" style="text-decoration: underline;">iD Tech Camp's</a></nobr> 
 		        Rider University location, teaching Java, JavaScript, Unreal Engine, and Maya.         
 		        
 		      </div>
@@ -100,10 +101,7 @@
 						    <div id="collapseTrackBuilder" class="panel-collapse collapse">
 						      <div class="panel-body">
 						        <h2>Track Builder</h2>
-						        <iframe width="100%" height="315" src="https://www.youtube.com/embed/3b6LYW6hun8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-						        <br>
-						    	<i><b>Important Note:</b> This video is not an accurate representation of what the app looks like through the Magic Leap One device. It was unintentionally recorded with an opaque background, and thus does not show the app augmenting reality, which it does when viewed through the device. A better video will be recorded and posted here once I have access to a Magic Leap device in the near-future.</i>
-						    	<br>
+						        <iframe width="100%" height="315" src="https://drive.google.com/file/d/1j9o7lFqUjzpG5OBl5ZoA1pTleo4-f_iL/view?usp=sharing" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 						    	<br>
 						        <b>Completed:</b> January 2019
 						    	<br>
