Fixed track builder video

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 						    <div id="collapseTrackBuilder" class="panel-collapse collapse">
 						      <div class="panel-body">
 						        <h2>Track Builder</h2>
-						        <iframe width="100%" height="315" src="https://drive.google.com/file/d/1j9o7lFqUjzpG5OBl5ZoA1pTleo4-f_iL/view?usp=sharing" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						        <iframe src="https://drive.google.com/file/d/1j9o7lFqUjzpG5OBl5ZoA1pTleo4-f_iL/preview" allowfullscreen="" frameborder="0" width="100%" height="315"></iframe>
 						    	<br>
 						        <b>Completed:</b> January 2019
 						    	<br>
