Added AR Portfolio/Business Card

--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
 		        Lately, my primary focus has been in C# and Unity development, but I have experience with many technologies, and am open to learning more. Check out the projects section to see some of that experience. 
 		        <br>
 		        <br>
+		        This summer, I will work as a mixed reality research assistant at the <a href="http://ict.usc.edu/">University of Southern California Institute for Creative Technolgies.</a>
+		        <br>
+		        <br>
 
 		        I have previously worked as a Unity developer for <nobr><a href="http://www.bogotadc.tv/#/transplant/">Bogota Digital Cinema</a></nobr>, where I worked on an interactive mixed reality art exhibit. I also worked as the Lead Instructor at 
 		        <nobr><a href="https://www.idtech.com/" style="text-decoration: underline;">iD Tech Camp's</a></nobr> 
@@ -90,6 +93,56 @@
 
 				    <!-- Accordion for "Unity/C#" tab -->
 						<div class="panel-group" id="accordion">
+							<div class="panel panel-default">
+						    <div  data-toggle="collapse" data-parent="#accordion" href="#collapseBusinessCard" class="panel-heading" style="cursor:pointer;">
+						      <h4 class="panel-title">
+						        <a>
+						          AR Portfolio
+						        </a>
+						      </h4>
+						    </div>
+						    <div id="collapseBusinessCard" class="panel-collapse collapse">
+						      <div class="panel-body">
+						         <h2>AR Portfolio</h2>
+						        <iframe src="https://drive.google.com/file/d/1-QGGVUfnGa9rSYIvF8u9cqLY9rRukyNk/preview" allowfullscreen="" frameborder="0" height="315" width="100%"></iframe>
+						    	<br>
+						    	*Institute <i>for</i> Creative Technologies. I've corrected this in the app.
+						    	
+						    	<br>
+						    	<br>
+						    	<b>Completed:</b> March 2019
+						    	<br>
+						    	<b>Project Duration:</b> ~One Week
+						    	<br>
+						    	<b>Role(s):</b> Developer, Programmer, Designer
+						    	<br>
+						    	<b>Team Size:</b> One
+						    	<br>
+						    	<b>Technologies/Languages I Used:</b> Unity, C#, Vuforia
+						    	<br>
+						    	<b>Code/Files:</b> <a href="https://github.com/rhs31/Business-Card-Midterm"><i class="fab fa-github fa-fw"></i></a>
+						    	<br>
+						    	<b>Description:</b>
+						    	<br> 
+						    	This was a fun little project that I did for my Augmented Reality class. The assignment was to apply any of the concepts we had previously learned (various Vuforia and ARCore topics) to create an app. 
+						    	<br>
+						    	<br>
+						    	I wanted to make an AR app that I could actually use in my day-to-day, so I decided to make an interactive, augmented reality "preview" of my portfolio site, in the form of a business card that I could hand to a potential employer. I had gotten this idea from an earlier lesson, which suggested using a business card for AR. This was what I made, shot through an older Android tablet, hence the slower framerate and time it takes to load in my site.
+						    	<br>
+						    	<br>
+						    	It utilizes the augmented reality framework Vuforia, which allows for AR image tracking on a mobile device.
+						    	<br>
+						    	<br>
+						    	I am aware that the video does not in fact show a business card, but that picture of me could easily be swapped out for one. The full idea (which I still want to fully implement) would be to have a QR code on my resume or business card, which, when scanned by a mobile device, redirects you to a place where you can download the app. The app would then use the business card as an image target, to display what is shown here.
+						    	<br>
+						    	<br>
+						    	A less convoluted version of this is just whipping out my tablet and showing people the app myself.
+						    	<br>
+						    	<br>
+						    	Either way, I think it's a fun preview of my skill set. 
+						      </div>
+						    </div>
+						</div>
 						  <div class="panel panel-default">
 						    <div class="panel-heading" data-toggle="collapse" data-parent="#accordion" href="#collapseTrackBuilder" class="panel-heading" style="cursor:pointer;">
 						      <h4 class="panel-title">
