--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 						         <h2>AR Portfolio</h2>
 						        <iframe src="https://drive.google.com/file/d/1-QGGVUfnGa9rSYIvF8u9cqLY9rRukyNk/preview" allowfullscreen="" frameborder="0" height="315" width="100%"></iframe>
 						    	<br>
-						    	*Institute <i>for</i> Creative Technologies. I've corrected this in the app.
+						    	*Institute for Creative Technologies. I've corrected this in the app.
 						    	
 						    	<br>
 						    	<br>
