Added Coral Guardin' description, modified AR Portfolio

--- a/index.html
+++ b/index.html
@@ -94,6 +94,53 @@
 				    <!-- Accordion for "Unity/C#" tab -->
 						<div class="panel-group" id="accordion">
 							<div class="panel panel-default">
+						    <div class="panel-heading" data-toggle="collapse" data-parent="#accordion" href="#collapseCoralGuardin" class="panel-heading" style="cursor:pointer;">
+						      <h4 class="panel-title">
+						        <a>
+						          Coral Guardin'
+						        </a>
+						      </h4>
+						    </div>
+						    <div id="collapseCoralGuardin" class="panel-collapse collapse">
+						      <div class="panel-body">
+						        <h2>Coral Guardin'</h2>
+						        <iframe src="https://drive.google.com/file/d/1dUfU9sPYyL4Z19LgCofA5nlH0FvMvbUz/preview" allowfullscreen="" frameborder="0" width="100%" height="315"></iframe>
+						    	<br>
+						        <b>Completed:</b> May 2019
+						    	<br>
+						    	<b>Project Duration:</b> ~Three Weeks
+						    	<br>
+						    	<b>Role(s):</b> Lead Programmer/Developer, Co-Designer
+						    	<br>
+						    	<b>Team Size:</b> Five
+						    	<br>
+						    	<b>Technologies/Languages I Used:</b> Unity, C#, Magic Leap One
+						    	<br>
+						    	<b>Code/Files:</b> <a href="https://github.com/rhs31/OceanProject"><i class="fab fa-github fa-fw"></i></a> 
+						    	<br>
+						    	<b>Description:</b>
+						    	<br> 
+						    	This project was made as the final project for my Augmented Reality class. I was also given permission to make this my final project for my Virtual Worlds class as well. It ended up winning "Best Game" at the University of Miami Interactive Media program's <a href="https://interactive.miami.edu/canesfilmfestival/">end-of-the-year show.</a> 
+						    	<br>
+						    	<br>
+						    	In this game, the player must place down a piece of coral, and defends it for two minutes by putting floating waste that would damage it in a recycling bin. If the coral is hit by too much trash, it dies. Once the two minutes are up, the player can place down another piece of coral, and then must defend <b>both</b> of them at the same time in the next "wave." The player keeps putting down and defending coral while adding to their total score until either all of their coral is dead, or they lose three corals in total. In this way, the difficulty scales while the player builds a "garden" of coral.
+						    	<br>
+						    	<br>
+						    	This was a group project. I was assigned to a group with classmates Hal Milenkovic, Ishan Outram, Yuan Fang, and Ryan Wong. Each group in the class was given a different assignment, and ours was to make a Magic Leap project about the Ocean. 
+						    	<br>
+						    	<br>
+						    	We decided early on to make it a game about protecting ocean life from pollution. Hal had made a phone AR game for his midterm project about defending a base from UFOs, so we decided to create a game around the same principle. Within the first or second meeting, we had conceptualized a game about protecting coral from floating trash. Here's a <a href="https://twitter.com/snuffysam/status/1127346245943558144">concept sketch</a>, courtesy of Ishan. 
+						    	<br>
+						    	<br>
+						    	Hal sent me the repo from his midterm project for inspiration. Then I took the Magic Leap One back to my dorm and started developing the new project in Unity. Hal sent me 3D models for the claw, recycling bin, and some of the trash. He also sent some additional scripts for the game. Meanwhile, Ishan created the music. Ishan, Yuan, and Ryan all sent me assets such as sounds and 3D models from around the web.
+						    	<br>
+						    	<br>
+						    	The final outcome got a lot of attention and generated a good amount of buzz among people interested in Magic Leap development, including from some well-known figures in the XR world. You can check out some of that buzz <a href="https://twitter.com/rahb_19/status/1126516217144053760">here</a> and <a href="https://twitter.com/yuncod/status/1126199554179850242">here</a>.
+								
+						      </div>
+						    </div>
+						  </div>
+							<div class="panel panel-default">
 						    <div  data-toggle="collapse" data-parent="#accordion" href="#collapseBusinessCard" class="panel-heading" style="cursor:pointer;">
 						      <h4 class="panel-title">
 						        <a>
@@ -124,7 +171,7 @@
 						    	<br>
 						    	<b>Description:</b>
 						    	<br> 
-						    	This was a fun little project that I did for my Augmented Reality class. The assignment was to apply any of the concepts we had previously learned (various Vuforia and ARCore topics) to create an app. 
+						    	This was a fun little project that I did for my Augmented Reality class. It ended up winning "Best Portfolio" at the University of Miami Interactive Media program's <a href="https://interactive.miami.edu/canesfilmfestival/">end-of-the-year show.</a> The assignment was to apply any of the concepts we had previously learned (various Vuforia and ARCore topics) to create an app. 
 						    	<br>
 						    	<br>
 						    	I wanted to make an AR app that I could actually use in my day-to-day, so I decided to make an interactive, augmented reality "preview" of my portfolio site, in the form of a business card that I could hand to a potential employer. I had gotten this idea from an earlier lesson, which suggested using a business card for AR. This was what I made, shot through an older Android tablet, hence the slower framerate and time it takes to load in my site.
