minor tweak in description

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 						    	This was my project when I worked as a research intern at the <a href="http://ict.usc.edu/">USC Institute for Creative Technologies</a>. This was a small piece of an ongoing project at the Institute to create a collaborative VR environment for use by the US Air Force. 
 						    	<br>
 						    	<br>
-						    	The portion of the project which I worked on involved exploring and prototyping various camera techniques, for potential use in the larger application. We felt that perspective, especially for productivity, is an area which has not been explored much for VR. I worked on this with my co-intern, Katherine Hsiao.
+						    	The portion of the project which I worked on involved exploring and prototyping various camera techniques, for potential use in the larger application. We felt that perspective, specifically for collaboration, is an area which has not been explored much for VR. I worked on this with my co-intern, Katherine Hsiao.
 						    	<br>
 						    	<br>
 						    	We ended up prototyping three camera techniques: Default Camera/Viewport Mode, 360 Degree Mode, and Flashlight Mode, and we conducted a user study involving a task, to test their effectiveness. Each of these techniques involved a user-spawned "viewport," and a corresponding spawned camera in worldspace. 
